[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["net","rt","io-util"] }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["fast", "zeroize", "digest", "std"] }
utils = { path = "../utils" }
sha2 = { version = "0.10.9" }
