[package]
name = "network"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1.49.0", features = ["net","rt","io-util","sync"] }
sha2 = { version = "0.10.9" }
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["fast", "zeroize", "digest", "std"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["zeroize", "precomputed-tables", "static_secrets"] }