[package]
name = "peer_discovery"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1.49.0", features = ["rt", "net", "time"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["zeroize", "precomputed-tables", "static_secrets"] }